--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <body>
     <input type="text" id="product" />
     <input type="button" id="submit" value="Submit" />
-    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js" />
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript">
       $("#submit").click{
         var product = $("#product").val();
