--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <input type="button" id="submit" value="Submit" />
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript">
-      $("#submit").click{
+      $("#submit").click(function(){
         var product = $("#product").val();
         $.post('/list/add/'+product);
-      }
+      });
     </script>
   </body>
 </html>
