Search logic + tester page

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript">
       $("#submit").click(function(){
-        $.get('/recipes/sads', function(data){
+        $.get('/recipes', function(data){
           console.log(data);
         });
       });
