--- a/admin.html
+++ b/admin.html
@@ -100,6 +100,12 @@
               <span class="demo-card-image__filename">Olier og Dressing</span>
             </div>
           </div>
+          <div class="demo-card-image mdl-card mdl-shadow--2dp" data-category="Spices" style="background: url('images/spices.jpg') center / cover;float:left; margin: 10px;width: 45%;">
+            <div class="mdl-card__title mdl-card--expand"></div>
+            <div class="mdl-card__actions">
+              <span class="demo-card-image__filename">Kryderier</span>
+            </div>
+          </div>
 
         </div>
       </div>
@@ -116,15 +122,16 @@
       var socket = io();
       var snackbarContainer = document.querySelector('#demo-toast-example');
 
-      var veglist = ['Kartofler', 'Tomater', 'Agurk', 'Løg'];
-      var breadlist = ['Rugbrød', 'Franskbrød', 'Boller', 'Flute'];
-      var meatlist = ['Hakket Oksekød', 'Hakket Svinekød', 'Hakket Kylling', 'Kyllingefillet', 'Bøf', 'Laks', 'Bacon'];
-      var drylist = ['Ris', 'Pasta', 'Lasagneplader', 'Sukker', 'Mel'];
-      var canlist = ['Flåede Tomater', 'Tomatpurre', 'Majs'];
-      var saucelist = ['Ketchup', 'Remulade', 'Mayonaise', 'Sennep', 'Money Sauce', 'Rødvins Sauce'];
-      var dairylist = ['Mælk', 'Æg', 'Fløde', 'Smør', 'Revet Ost', 'Mozzerella', 'Ost'];
-      var fruitlist = ['Æbler', 'Bananer', 'Pærer', 'Ananas', 'Vindruger'];
-      var oillist = ['Olivenolie', 'Rapsolie', 'Kokusolie', 'Balsamico'];
+      var veglist = ['Agurk','Asparges', 'Auberginer', 'Avocado', 'Bagekartofler','Blandet grøn salat', 'Blomkålshoved','Broccoli','Champignon','Cherrytomater','Chili','Cornichoner','Forårsløg','Gulerødder','Hjerteblade', 'Salat', 'Icebergsalat','Jordskokker','Kartofler','Løg','Pastinak','Peberfrugt','Persillerod','Porrer','Purløg','Radiser','Rucola','Rød peber','Rødbede','Rød løg','Salatmix','Selleriknold','Skalotteløg','Slikærter','Snackpeber','Squash', 'Tomater', 'Ærter'];
+      var breadlist = ['Brød','Brødcroutoner','Pitabrød','Tortillas','Rugbrød', 'Franskbrød', 'Boller', 'Flute'];
+      var meatlist = ['Bacontern', 'Chorizopølse','Engelsk bøf','Fiskefars','Flæsk','Gullash ungkvæg i tern','Hakket kalv og svin', 'Hakket Kylling','Hakket oksekød','Hamburgerryg','Hel kylling','Herregårdskoteletter','Kalvecuvette','Kammusling', 'Entrecote','Kyllingebryst','Kyllingefilet','Kyllingelår','Parmaskinke','Rejer', 'Røget hellefisk', 'Skinkekød','Svinemørbrad','Tigerrejer', 'Torske fars'];
+      var drylist = ['Bouillonterning','Brun farin','Cashewnødder','Couscous','Gnocchi', 'Græskarkerner','Hasselnødder','Lasagneplader','Nudler','Pasta','Pinjekerner','Rasp','Rørsukker','Sesamfrø', 'Sukker', 'Mel'];
+      var canlist = ['Flåede Tomater','Kidneybønner','Kokosmælk','Pebermakrel','Pickles','Røde bønner', 'Tomatpuré', 'Majs','Tun i vand','Tun i æbler'];
+      var saucelist = ['Chilisauce', 'Chutney','Dijonsennep','Eddike','Engelsk sauce','Grøn pesto','Honning','Kapers','Ketchup','Kyllingefond','Mangochutney','Mayonaise','Salatmayonaise','Sambal oelek', 'Sennep', 'Soya', 'Tomatsuppe', 'Money Sauce', 'Rødvins Sauce'];
+      var dairylist = ['Cremefraiche','Fløde','Gorgonzola','Hvidløgssmør','Manchego ost','Mozzarella','Mælk','Revet ost', 'Smør','Ost','Æg'];
+      var fruitlist = ['Abrikoser','Appelsiner', 'Citron','Lime','Mango', 'Pærer', 'Tranebær', 'Æbler','Bananer','Vindruger'];
+      var oillist = ['Balsamico','Hvidvin','Hvidvinseddike','Lagereddike','Olivenolie', 'Rapsolie','Sesamolie', 'Kokusolie', 'Balsamico','Mørk øl','Tahin','Tidselolie', 'Øl'];
+      var spicelist = ['Basilikum', 'Dild', 'Hvidløg', 'Ingefær','Karry','Karse','Koriander','Laurbærblade','Muskatnød','Mynteblade','Paprika','Peberkorn','Peberrod','Persille','Sellerisalt', 'Soltørrede tomater','Timian', 'Tørrede abrikoser'];
 
       $(".demo-card-image").click(function() {
         category = $(this).attr('data-category');
@@ -139,6 +146,7 @@
         if(category == 'Dairy'){ list = dairylist;}
         if(category == 'Fruit'){ list = fruitlist;}
         if(category == 'Oils'){ list = oillist;}
+        if(category == 'Spices'){ list = spicelist;}
 
         $("#products").html('');
 
